...

                command.actualAssessmentCompletedDate?.isBefore(command.intakeDate) == true -> {
                    "Assessment completion date cannot precede intake."
                }

                command.actualAssessmentCompletedDate?.isAfter(today) == true -> {
                    "Assessment completion date cannot be in the future."
                }

                command.plannedExitDate?.isBefore(command.intakeDate) == true -> {
                    "Planned exit date cannot precede intake."
                }

...
